--- a/Training.html
+++ b/Training.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 <head>
 <title>Training</title>
@@ -35,12 +34,18 @@
 		padding: 20px;
 		background-color: white;
 		text-align: left;
+		flex: 1;
 	}
 
 	.video {
 		margin-top: 20px;
 		text-align: right;
-		justify-content: right;
+		flex: 1;
+	}
+
+	.video video {
+		width: 100%;
+		height: auto;
 	}
 </style>
 </head>
@@ -59,61 +64,229 @@
 			<a href="Training.html">Training</a>
 		</center>
 	</nav>
-<div>
+<center>
+<h1>
+<table cellspacing="30" cellpadding="30">
+<tr>
+<td><a href="Training.html">Week 1</a></td>
+<td><a href="Training1.html">Week 2</a></td>
+</table>
+</h1>
+<center>
+<p><h1> Mood - Al James</h1>
+<h3>(Week 1)</h3>
+<a href="https://www.youtube.com/watch?v=XlYZNo4Keq0&ab_channel=AlJames">youtube.com/listen-to-AlJames</a></p>
+		</div>
+
+<p>
 	<div class="container">
-<left>
-<ul>
-		<li><div class="text">
+
+		<div class="text">
 			<p>Day 1 - Mood - Al James<br>
-Glen Mark Lazaga,<br>
-Johnlloyd Salili,<br>
-Windyl Sario,<br>
-Alic Francis,<br>
-John Ricky Salili,<br>
-Wilmar Sario</li><br></p>
-</left>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Windyl Sario,<br>
+			Alic Francis,<br>
+			John Ricky Salili,<br>
+			Wilmar Sario<br>
+			Nelson B. Elemino (Choreo-Videograph.)</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day 1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
 		</div>
 	</div>
-<body>
 
 	<div class="container">
-	<right>
-		<li><div class="video">
-			<video width="250" height="250" controls>
-				<source src="day 1.mp4" type=video/mp4>
-				<source src="C:\Users\Windows 10 Pro\Music type=Video/mp4>
-			</video>
-		</div>
-	</div>
-</div>
-</li>
-</ul>
-	</right>
-<ul>
-<right>
-<div>
-		<li><div class="text">
+		<div class="text">
 			<p>Day 2 - Mood - Al James<br>
-Nelson B. Elemino - Choreographer<br>
-Glen Mark Lazaga,<br>
-Johnlloyd Salili,<br>
-Alic Francis,<br>
-Clith Villacarlos<br></p>
-</li>
-</left>
+			Nelson B. Elemino - Choreographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Alic Francis,<br>
+			Clith Villacarlos<br>
+			Claire Tampus<br></p>
 		</div>
-	</div>
-<body>
-	<div class="container">
-	<right>
-		<li><div class="video">
-			<video width="250" height="250" controls>
-				<source src="day 2.mp4" type=video/mp4>
-				<source src="C:\Users\Windows 10 Pro\Music type=Video/mp4></li>
+		<div class="video">
+			<video controls>
+				<source src="day 2.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
 			</video>
 		</div>
 	</div>
-</div>
-</ul>
+	<div class="container">
+		<div class="text">
+			<p>Day 3 - Mood - Al James<br>
+			Nelson B. Elemino - Choreographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Alic Francis,<br>
+			Claire Tampus,<br>
+			Windyl Sario,<br>
+			Clith Villacarlos,<br>
+			Ace Mahilum (Videographer)<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day3.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 4 - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Windly Sario,<br>
+			Wilmar Sario,<br>
+			Clith Villacarlos<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day4.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 5 - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Alic Francis,<br>
+			Clith Villacarlos<br>
+			Johnkirk Encabo,<br>
+			Ace Mahilum,<br>
+			Wilmar Sario,<br>
+			Junard James Ninal,<br>
+			Claire Tampus<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day5.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 5 (Special Video) - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Claire Tampus<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day5.1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 5 Final - Mood - Al James<br>
+			Nelson B. Elemino - Choreographer<br>
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day5final.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Team 1) - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Glen Mark Lazaga,<br>
+			Wilmar Sario,<br>
+			Alic Francis,<br>
+			Johnkirk Encabo<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day61.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Team 2) - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Claire Tampus,<br>
+			Johnlloyd Salili,<br>
+			Windyl Sario,<br>
+			Clith Villacarlos<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day62.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Special Video) - Mood - Al James<br>
+			Nelson B. Elemino - Videographer<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Windyl Sario,<br>
+			Wilmar Sario<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day6-1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Solo) - Mood - Al James<br>
+			Johnlloyd Salili<br>
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="day6solo.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Solo) - Mood - Al James<br>
+			Clith Villacarlos<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="daysimo.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+		<div class="text">
+			<p>Day 6 (Duo) - Mood - Al James<br>
+			Glen Mark Lazaga,<br>
+			Windyl Sario<br></p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="duo.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
+			</video>
+		</div>
+	</div>
+</p>
 </body>
 </html>
