--- a/Training.html
+++ b/Training.html
@@ -130,7 +130,7 @@
 		</div>
 		<div class="video">
 			<video controls>
-				<source src="day3.mp4" type="video/mp4">
+				<source src="Day3.mp4" type="video/mp4">
 				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
 			</video>
 		</div>
@@ -183,7 +183,7 @@
 		</div>
 		<div class="video">
 			<video controls>
-				<source src="day5.1.mp4" type="video/mp4">
+				<source src="Day5.1.mp4" type="video/mp4">
 				<source src="C:\Users\Windows 10 Pro\Music" type="video/mp4">
 			</video>
 		</div>
