--- a/training1.html
+++ b/training1.html
@@ -70,7 +70,7 @@
 <table cellspacing="30" cellpadding="30">
 <tr>
 <td><a href="Training.html">Week 1</a></td>
-<td><a href="Training1.html">Week 2</a></td>
+<td><a href="https://ezrafeel.github.io/DanceTraining/training1.html?fbclid=IwAR3uRbBMJcF3GJyONkDU1_XEN6m_ANu4YjhQkjGZwtRhU0jyfowpsvXHPAA">Week 2</a></td>
 </table>
 </h1>
 <center>
