--- a/training1.html
+++ b/training1.html
@@ -115,5 +115,68 @@
 			</video>
 		</div>
 	</div>
+	<div class="container">
+
+		<div class="text">
+			<p>Day 2 - Maikee's Letter - Just Hush<br>
+			Glen Mark Lazaga,<br>
+			Johnlloyd Salili,<br>
+			Wilmar Sario,<br>
+			Clith Villacarlos,<br>
+			WIndyl Sario,<br>
+			Alic Francis<Br>
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="2day2.1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+
+		<div class="text">
+			<p>Day 2 (Duo) - Maikee's Letter - Just Hush<br>
+			Glen Mark Lazaga,<br>
+			WIndyl Sario,<br>
+			
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="2dayduo.1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+
+		<div class="text">
+			<p>Day 2 (Solo) - Maikee's Letter - Just Hush<br>
+			Alic Francis<Br>
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="2dayalic.1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
+			</video>
+		</div>
+	</div>
+	<div class="container">
+
+		<div class="text">
+			<p>Day 2 (Solo) - Maikee's Letter - Just Hush<br>
+			Clith Villacarlos,<br>
+			</p>
+		</div>
+		<div class="video">
+			<video controls>
+				<source src="2daysimo.1.mp4" type="video/mp4">
+				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
+			</video>
+		</div>
+	</div>
 </body>
 </html>
