--- a/training1.html
+++ b/training1.html
@@ -139,7 +139,7 @@
 		<div class="text">
 			<p>Day 2 (Duo) - Maikee's Letter - Just Hush<br>
 			Glen Mark Lazaga,<br>
-			WIndyl Sario,<br>
+			WIndyl Sario<br>
 			
 			</p>
 		</div>
@@ -168,7 +168,7 @@
 
 		<div class="text">
 			<p>Day 2 (Solo) - Maikee's Letter - Just Hush<br>
-			Clith Villacarlos,<br>
+			Clith Villacarlos<br>
 			</p>
 		</div>
 		<div class="video">
