--- a/training1.html
+++ b/training1.html
@@ -145,7 +145,7 @@
 		</div>
 		<div class="video">
 			<video controls>
-				<source src="2dayduo.1.mp4" type="video/mp4">
+				<source src="2dayduo.mp4" type="video/mp4">
 				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
 			</video>
 		</div>
@@ -159,7 +159,7 @@
 		</div>
 		<div class="video">
 			<video controls>
-				<source src="2dayalic.1.mp4" type="video/mp4">
+				<source src="2dayalic.mp4" type="video/mp4">
 				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
 			</video>
 		</div>
@@ -173,7 +173,7 @@
 		</div>
 		<div class="video">
 			<video controls>
-				<source src="2daysimo.1.mp4" type="video/mp4">
+				<source src="2daysimo.mp4" type="video/mp4">
 				<source src="C:\Users\Windows 10 Pro\Music\New folder" type="video/mp4">
 			</video>
 		</div>
