--- a/Home.html
+++ b/Home.html
@@ -64,7 +64,7 @@
 
     <script>
         
-        const validMemberNames = ['Nelson Elemino', 'Glen Mark Lazaga', 'Clith Villacarlos', 'Johnloyd Salili', 'Claire Tampus', 'Alic Francis', 'Windyl Sario', 'Wilmar Sario', 'Melke Mahilum', 'Louise Keith Ninal'];
+        const validMemberNames = ['Nelson Elemino', 'John Kirk Emcabo', 'Glen Mark Lazaga', 'Clith Villacarlos', 'Johnloyd Salili', 'Claire Tampus', 'Alic Francis', 'Windyl Sario', 'Wilmar Sario', 'Melke Mahilum', 'Louise Keith Ninal'];
 
         
         function showMemberNameRestrictionPopup() {
