--- a/Trainees.html
+++ b/Trainees.html
@@ -49,6 +49,7 @@
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
+		background-color: white;
         }
 
       
