--- a/Trainees.html
+++ b/Trainees.html
@@ -87,7 +87,7 @@
 		<Br><p>(Hiphop, Krump, Pop, Choreography)<br>
 		<b>[OPTION 1, 14th of March, UVTDC] still learning </b></p><Br>
 	<a href="https://www.facebook.com/profile.php?id=100015337953126">
-            <img class="member-image" src="glen.jpg" alt="Glen Mark Lazaga" title="Glen Mark Lazaga"></a>
+            <img class="member-image" src="Glen.jpg" alt="Glen Mark Lazaga" title="Glen Mark Lazaga"></a>
         </li>
          <li class="member-item">
             <span class="member-name"><h3>Johnloyd Salili</h3></span>
