--- a/Trainees.html
+++ b/Trainees.html
@@ -85,7 +85,7 @@
         <li class="member-item">
             <span class="member-name"><h3>Glen Mark Lazaga</h3></span>
 		<Br><p>(Hiphop, Krump, Pop, Choreography)<br>
-		<b>[OPTION 1, 14th of March, UVTDC] still learning </b></p><Br>
+		<b>[Option 1, 14th of March, UVTDC] still learning </b></p><Br>
 	<a href="https://www.facebook.com/profile.php?id=100015337953126">
             <img class="member-image" src="Glen.jpg" alt="Glen Mark Lazaga" title="Glen Mark Lazaga"></a>
         </li>
@@ -100,7 +100,7 @@
  	<li class="member-item">
             <span class="member-name"><h3>Clith Villacarlos</h3></span>
 		<br><p>(Hiphop, Choreography)<br>
-			<b> still learning</b></p><br>
+			<b>[Hinulawan Dancer] still learning</b></p><br>
 	<a href="https://www.facebook.com/villacarlosc">
             <img class="member-image" src="simo.jpg" alt="Clith Villacarlos" title="Clith Villacarlos"></a>
         </li>
